# 03_Robotica

./: 404.html  LICENCE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: main.yml
Instruções/CPP_SDK_v4/: index.html
Instruções/CPP_SDK_v6/: index.html
Instruções/Choregraphe_v4/: index.html
Instruções/Choregraphe_v6/: index.html
Instruções/Conceitos_Gerais/: index.html
Instruções/Guia_POO/: index.html
Instruções/Maquina_Virtual/: index.html
Instruções/NAO_Flasher/: index.html
docs/: index.md  mkdocs-kludge.sh
docs/sobre/: equipe.md  (+1 more)
nao-programs/naoqi-2.1/cpp/01.hello-world-legacy/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  qiproject.xml
nao-programs/naoqi-2.1/cpp/03.hello-world-module/: CMakeLists.txt  helloworldmodule.cpp  helloworldmodule.hpp  main.cpp  qiproject.xml
nao-programs/naoqi-2.1/cpp/04.using-events/: CMakeLists.txt  eventsay.cpp  eventsay.hpp  main.cpp  qiproject.xml
nao-programs/naoqi-2.1/cpp/05.riseup/: CMakeLists.txt  main.cpp  qiproject.xml  riseup.cpp  riseup.hpp
nao-programs/naoqi-2.1/cpp/07.walking-custom/: CMakeLists.txt  qiproject.xml  walking.cpp  walking.hpp
release/: index.html
ros1/: bootstrap-chroot-64.sh  compiling-for-arm-based-systems.md  installing-native-packages.md  installing-precompiled-packages.md  ubuntu-compile-install-ros1-32.sh  ubuntu-compile-install-ros1-noetic.sh  ubuntu-install-ros1-32-base.sh  ubuntu-install-ros1-64-base.sh  ubuntu-install-ros1-64-desktop-full.sh  ubuntu-install-ros1-64-desktop.sh  ubuntu-install-ros1-noetic-desktop-full.sh
ros2/: .gitignore  bootstrap-chroot-32.sh  bootstrap-chroot-64.sh  chroot-env-vars.sh  compiling-for-amd64-based-systems.md  compiling-for-arm-based-systems.md  general-instructions.md  install-ros-64.sh  install-ros2-32.sh  install-ros2-64.sh  install-ros2-humble.sh  installing-precompiled-packages.md  ubuntu-compile-install-ros2-32.sh  ubuntu-compile-install-ros2-64.sh  ubuntu-install-ros2-64-base.sh  ubuntu-install-ros2-64-desktop.sh  ubuntu-install-ros2-humble-desktop.sh
scripts/: navegando.md
search/: search_index.json
(+205 files in other folders)
